--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,4 @@ TSWLatexianTemp*
 # generated if using elsarticle.cls
 *.spl
 Séquences/S00_SecoursDrone/S00_2_SecoursDrone_02_RickAllen.mp4
+*.odp#
