--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,5 @@ TSWLatexianTemp*
 *.spl
 Séquences/S00_SecoursDrone/S00_2_SecoursDrone_02_RickAllen.mp4
 *.odp#
+Séquences/S00_SecoursDrone/Ressources/S00_2_SecoursDrone_02_RickAllen.mp4
+Séquences/S00_SecoursDrone.zip
